# notmuch-haskell

./: .gitignore  .gitmodules  COPYING  Makefile  NOTMUCH_H.hsc  Notmuch.hs  NotmuchTest.hs  README.md  Setup.hs  notmuch-haskell.cabal  notmuch.cabal
Foreign/: NOTMUCH_H.hsc  Notmuch.hs
cbits/: talloc-ref.c
