Name: notmuch-haskell
Version: 1.0.0.0
Cabal-Version: >= 1.6
Author: Bart Massey <bart@cs.pdx.edu>
Maintainer: Bart Massey <bart@cs.pdx.edu>
Copyright: © 2010 Bart Massey
License: LGPL
License-file: COPYING
Synopsis: Binding for notmuch MUA library
Category: Email, Foreign
Build-Type: Simple
Stability: Experimental
Bug-Reports: mailto:bart@cs.pdx.edu
Description:
   This is a half-assed higher-level Haskell binding
   for the Notmuch (notmuchmail.org) email indexing library.

Library
  Build-Depends: base >= 4.5, containers >= 0.4.2, time >= 1.4, filepath >= 0.1.3
  Exposed-Modules: Foreign.Notmuch
  Other-Modules: Foreign.NOTMUCH_H
  Extra-Libraries: notmuch gmime-2.6 z nsl gobject-2.0 glib-2.0 talloc xapian

Executable notmuch-test
  main-is: NotmuchTest.hs
  other-modules: Foreign.Notmuch Foreign.NOTMUCH_H
  build-depends: base >= 4.5, old-locale >=1, parseargs >= 0.1.3
  Extra-Libraries: notmuch
