Name: notmuch
Version: 0.0.1
Cabal-Version: >= 1.2
Author:  Bart Massey
Synopsis: Binding for notmuch MUA library
Category: Example
Build-Type: Simple

Library
  Build-Depends: base, containers, time, filepath
  Exposed-Modules: Notmuch
  Other-Modules: NOTMUCH_H
  Extra-Libraries: notmuch gmime-2.4 z nsl gobject-2.0 glib-2.0 talloc xapian
  Include-Dirs: .
